--- a/style.css
+++ b/style.css
@@ -1,263 +1,363 @@
 html,
 body {
-    height: 100%;
+	height: 100%;
 }
 
 html {
-    scroll-behavior: auto;
+	scroll-behavior: smooth;
 }
 
 body {
-    /* background-color: #ea4630; */
-    background-color: #ad242c;
-    display: flex;
-    align-items: center;
-    scroll-behavior: smooth;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0;
-    margin: 0;
+	/* background-color: #ea4630; */
+	background-color: #19ACE9; /* Background color*/
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0;
+	margin: 0;
 }
 
 h1 {
-    background-color: #00000099;
-    font-family: 'IMPACT';
-    font-size: 3.5em;
-    text-align: center;
-    color: #ecdeb9;
-    padding: 1em 1.5em;
-    border-radius: 25px;
+	background-color: #00000099;
+	font-family: 'IMPACT';
+	font-size: 3.5em;
+	text-align: center;
+	color: #e3acce; /* " A World Without H8 txt" */
+	padding: 1em 1.5em;
+	border-radius: 25px;
 }
 
 .styled {
-    border: 0;
-    line-height: 2.5;
-    padding: 0 30px;
-    font-size: 1rem;
-    text-align: center;
-    height: 200px;
-  position: relative;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: rgba(3, 148, 252);
-    background-image: linear-gradient(to top left,
-                                      rgba(0, 0, 0, .2),
-                                      rgba(0, 0, 0, .2) 30%,
-                                      rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
-                inset -2px -2px 3px rgba(0, 0, 0, .6);
+	border: 0;
+	line-height: 2.5;
+	left: 515px;
+	padding: 0 100px;
+	font-size: 1rem;
+	text-align: center;
+	align-items: center;
+	height: 200px;
+	position: relative;
+	color: #fff; /* Button Color */ 
+	text-shadow: 1px 1px 1px #000;
+	border-radius: 10px;
+	background-color: #e81026; 
+	background-image: linear-gradient(to top left,
+									  rgba(0, 0, 0, .2),
+									  rgba(0, 0, 0, .2) 30%,
+									  rgba(0, 0, 0, 0));
 }
 
 .styled:hover {
-    background-color: rgba(252, 98, 3);
+	background-color: rgba(252, 98, 3);
 }
 
 .styled:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
-                inset 2px 2px 3px rgba(0, 0, 0, .6);
+	box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+				inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
 
 
 #about>p {
-    grid-column: 2/3;
-    align-content: start;
-    background-color: #00000099;
-    color: #ecdeb9;
-    padding: 2em;
-    margin: 0;
-    margin-bottom: 2em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+	grid-column: 2/3;
+	align-content: start;
+	background-color: #FC766A;
+	color: #ecdeb9;
+	padding: 2em;
+	margin: 0;
+	margin-bottom: 2em;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 
 nav {
-    display: flex;
-    background-color: #e07e60;
-    padding: .8em 0;
-    width: 100%;
-    font-family: 'IMPACT';
-    font-weight: bold;
-    font-size: 1.8em;
-    text-align: center;
-    z-index: 100;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	height: 3%;
+	background-color: #2A2B2DFF;
+	padding: .8em 0;
+	width: 100%;
+	font-family: 'IMPACT';
+	font-weight: bold;
+	font-size: 1.8em;
+	text-align: center;
+	z-index: 100;
 }
 
-nav a {
-    flex: 1;
-    width: 25%;
-    color: #1c1b1b;
-    text-decoration: none;
+.column {
+  float: left;
+  width: 465;
+  padding: 5px;
 }
 
-nav a:hover {
-    color: #226f61;
-    background-color: #cbaf71;
-    border-radius: 50%;
+/* Clear floats after image containers */
+.row:after{
+  content: " ";
+  clear: both;
+  display: table;
 }
+
+/*Edit the css to work this a list of nav bar buttons*/
+.nav-links {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+}
+
+.nav-links li{
+	list-style: none;
+}
+
+.nav-links a{
+	flex: 1;
+	width: 25%;
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+.nav-links a:hover {
+	color: #226f61;
+	background-color: #cbaf71;
+	border-radius: 50%;
+}
+
+/*Styles the burger button*/
+.burger{
+	display: none;
+	margin-left: 70%;
+}
+
+.burger div{
+	width: 25px;
+	height: 3px;
+	background-color: aliceblue;
+	margin: 5px; 
+	transition: all 0.3s ease;
+}
+
 
 main {
-    display: block;
-    height: 100vh;
-    overflow-y: scroll;
-    scroll-behavior: smooth;
-    width: 100%;
+	display: block;
+	height: 100vh;
+	overflow-y: scroll;
+	margin-left: auto;
+	scroll-behavior: smooth;
+	width: 100%;
 }
 
 section {
-    align-items: center;
-    justify-content: center;
-    height: 95vh;
+	align-items: center;
+	justify-content: center;
+	height: 95vh;
 }
 
 #home {
-    display: grid;
-    grid-template-rows: 70% 30%;
+	display: grid;
+	grid-template-rows: 70% 30%;
 }
 
 #about {
-    display: grid;
-    height: auto;
-    overflow: visible;
-    align-items: start;
-    grid-template-columns: auto;
+	display: grid;
+	height: auto;
+	align-items: start;
+	grid-template-columns: auto;
 }
 
 #contact {
-    display: grid;
-    grid-template-rows: 2;
-    grid-template-columns: 2;
-    font-size: 1vw;
+	display: grid;
+	grid-template-rows: 2;
+	grid-template-columns: 2;
+	font-size: 1vw;
 }
 
 footer {
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr 1fr 0.5fr 0.5fr;
-    background-color: #181818;
-    background-size: contain;
-    height: auto;
-    align-items: center;
-    justify-items: center;
-    color: darkgrey;
+	display: table;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	height: auto;
+	align-items: center;
+	color: #ecdeb9;
 }
 
 footer>p>a {
-    color: darkgrey;
-    text-decoration: none;
+	color: darkgrey;
+	text-decoration: none;
 }
 
 footer>p>a:hover {
-    color: darkgrey;
-    text-decoration: underline;
+	color: darkgrey;
+	text-decoration: underline;
 }
 
 
 
 .image1,
 .image2 {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .image1 {
-    /* REPLACE THIS WITH ACTUAL IMAGE*/
-    background-image: url("./images/background_1.png");
-}
-
-.image2 {
-    /* REPLACE THIS WITH ACTUAL IMAGE*/
-    background-image: url("./images/background2.png");
+	/* REPLACE THIS WITH ACTUAL IMAGE*/
+	background-image: url("./images/background_1.png");
 }
 
 
-.socialmedia{
-    background-image: url("./images/background3.png");
 
-
-
-}
 
 .santa-bubble {
-    grid-row: 1;
-    grid-column: 1;
-    justify-self: center;
-    width: 500px;
-    height: 500px;
-    min-width: 500px;
-    background-color: #3d0e11;
-    border-radius: 50%;
-    margin-right: -50px;
-    z-index: 5;
-    background-image: url(./images/santa_cutout_v2.png);
-    background-position: 50% 7%;
-    background-size: cover;
+	grid-row: 1;
+	grid-column: 1;
+	justify-self: center;
+	width: 500px;
+	height: 500px;
+	min-width: 500px;
+	background-color: #3d0e11;
+	border-radius: 50%;
+	margin-right: -50px;
+	z-index: 5;
+	background-image: url(./images/santa_cutout_v2.png);
+	background-position: 50% 7%;
+	background-size: cover;
 }
 
 h1.welcome {
-    grid-row: 1;
-    grid-column: 2;
-    justify-self: start;
+	grid-row: 1;
+	grid-column: 2;
+	justify-self: start;
 }
 
 p.welcome-subtext {
-    grid-row: 2;
-    grid-column: 1 / 3;
-    justify-content: center;
-    background-color: #00000099;
-    color: #ecdeb9;
-    text-align: center;
-    padding: 1em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+	grid-row: 2;
+	grid-column: 1 / 3;
+	justify-content: center;
+	background-color: #00000099;
+	color: #ecdeb9;
+	text-align: center;
+	padding: 1em;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 img.about-pic {
-    object-fit: cover;
-    grid-column: 1;
-    grid-row: 1/4;
-    max-height: 700px;
-    padding: 0;
-    margin: 0;
+	object-fit: cover;
+	grid-column: 1;
+	grid-row: 1/4;
+	max-height: 700px;
+	padding: 0;
+	margin: 0;
 }
 
 @media screen and (max-width: 768px) {
-    nav {
-        font-size: 1.3em;
-    }
-    #home {
-        display: grid;
-        grid-template-rows: 20% 60% 20%;
-    }
-    h1.welcome {
-        grid-row: 1;
-        grid-column: 1/3;
-        margin: 1em;
-        padding: 0.6em;
-        font-size: 2em;
-        align-self: top;
-        justify-self: center;
-        border-radius: 25%;
-    }
-    .santa-bubble {
-        grid-row: 2;
-        grid-column: 2/3;
-        margin-top: 1em;
-        width: 300px;
-        min-width: 300px;
-        height: 300px;
-        margin: 1em;
-        justify-self: center;
-    }
-    p.welcome-subtext {
-        grid-row: 3;
-        grid-column: 1/3;
-        width: 100vw;
-    }
-    #about>p {
-        grid-column: 1/3;
-    }
-    img.about-pic {
-        width: 100vw;
-    }
+	/*Hides X*/
+	body{
+		overflow-x: hidden;
+	}
+	/*Creates the right aligned button menu*/
+	.nav-links{
+		position: absolute;
+		 right: 0px;
+		 height: 92vh;
+		 top: 4vh;
+		 background-color: #2A2B2DFF;
+		 display: flex;
+		 flex-direction: column;
+		 align-items: center;
+		 width: 50%;
+		 transform: translateX(100%);
+		 transition: transform 0.5s ease-in;
+		
+	}
+	/*Hides buttons*/
+	.nav-links li{
+		opacity: 0;
+	}
+	/*Shows the burger button*/
+	.burger{
+		display: block;
+		cursor: pointer;
+	}
+	nav {
+		font-size: 1.3em;
+	}
+	#home {
+		display: grid;
+		grid-template-rows: 20% 60% 20%;
+	}
+	h1.welcome {
+		grid-row: 1;
+		grid-column: 1/3;
+		margin: 1em;
+		padding: 0.6em;
+		font-size: 2em;
+		align-self: top;
+		justify-self: center;
+		border-radius: 25%;
+	}
+	.santa-bubble {
+		grid-row: 2;
+		grid-column: 2/3;
+		margin-top: 1em;
+		width: 300px;
+		min-width: 300px;
+		height: 300px;
+		margin: 1em;
+		justify-self: center;
+	}
+	p.welcome-subtext {
+		grid-row: 3;
+		grid-column: 1/3;
+		width: 100vw;
+	}
+	#about>p {
+		grid-column: 1/3;
+	}
+	img.about-pic {
+		width: 100vw;
+	}
+	.store {
+		margin-left: 0px;
+	}
+
 }
+
+/*shows navigation bar in mobile use*/
+.nav-active{
+	transform: translateX(0%);
+}
+/*Animation for nav bar in mobile*/
+@keyframes navLinkFade{
+	from{
+		opacity: 0;
+		transform: translateX(50px);
+	}
+	to{
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+
+/*Animation for the burger button to become and X button*/
+.toggle .line1{
+	transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2{
+	opacity: 0;
+}
+.toggle .line3{
+	transform: rotate(45deg) translate(-5px, -6px);
+}
+
+
+
+
+
+
+
+
+
+
+
